# MQP

./: .gitignore  .gitmodules  README.md  nohup.out
arduino/src/: main.cpp
base/: AprilTag.py  Base.py  Base_old.py  Gas.py  Map.py  README.md  Robot.py
base/libs/: Gas.py  graphics.py
copter/src/: CMakeLists.txt  Cam.cpp  Cam.hpp  CamLoc.cpp  Copter.cpp  Copter.hpp  Field.cpp  Field.hpp  Pose.cpp  Pose.hpp  Robot.cpp  Robot.hpp
field/src/: CMakeLists.txt  Cam.cpp  Field.cpp  Field.hpp  Makefile  Pose.cpp  Pose.hpp  README.md  field.cpp  mqpif.cpp  mqpif.h
field/src/apriltags/.svn/: wc.db
robot/: Create1.py  Create2.py  Create2_create2.py  Create2_irobot.py  Create2_test_noIMU.py  IMU_test.py  README.md  Robot.py  direct movemenst  simpleSim.py  test_Create2.py
robot/Create1/: Robot.py
robot/Create2/: Create2.py  Robot.py
robot/Create2/breezycreate2/: __init__.py
robot/Create2/create2/: __init__.py
robot/Teensy/src/: main.cpp  main.hpp
robot/custom_libs/: RobotNavigationEKF.py
robot/lib/custom_libs/: RobotNavigationEKF.py  Robot_Navigation_EKF.py  encoding_TCP.py
robot/libs/Adafruit_BNO055/: BNO055.py
robot/libs/Teensy/src/: main.cpp  main.hpp
robot/libs/breezycreate2/: __init__.py
robot/libs/custom_libs/: EKF_Trial.py  NaviEKF.py  NaviLKF.py  RobotNavigationEKF.py  encoding_TCP.py  robotSim.py
robot/src/: Robot.py  robot.py
server/src/: server.py
